# open-db-viewer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MOCK.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/driver-api/: Cargo.toml
crates/driver-api/src/: error.rs  lib.rs
crates/driver-postgres/: Cargo.toml
crates/driver-postgres/src/: connection.rs  dialect.rs  lib.rs  metadata.rs  plan.rs  types.rs
crates/driver-redis/: Cargo.toml
crates/driver-redis/src/: lib.rs
docs/: dbeaver-postgres-architecture.md  dbeaver-postgres-refactor-tickets.md  postgres-driver-final-review.md  postgres-driver-implementation-review.md  postgres-driver-review-tickets.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: keychain.rs  lib.rs  main.rs  productivity.rs  state.rs
src/lib/: state.svelte.ts
src/lib/components/: CommandPalette.svelte  ErDiagram.svelte  PlanNodeView.svelte  RedisBrowser.svelte  ResultGrid.svelte  SchemaTree.svelte  SnippetsManager.svelte  SqlEditor.svelte  TableNode.svelte
src/routes/: +layout.svelte  +page.svelte
