[package]
name = "open-db-viewer"
version = "1.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "open_db_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core-db = { package = "core", path = "../crates/core" }
driver-api = { path = "../crates/driver-api" }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
keyring = "2"

