[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
driver-api = { path = "../driver-api" }
driver-postgres = { path = "../driver-postgres" }
driver-redis = { path = "../driver-redis" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dashmap = "5"
