[package]
name = "driver-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
driver-api = { path = "../driver-api" }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
rust_decimal = { version = "1", features = ["serde", "db-tokio-postgres"] }
